# csv_coord_formatter

./: .gitignore  app.py  config.toml  makefile  pyproject.toml  readme.md
components/: css.py  data_viewer.py  download_btn.py  download_section.py  gap.py  header_opt_input.py  index_col_input.py  msgs.py  output_filename_input.py  processing_params.py  processing_section.py  sep_input.py  uploader.py
utils/: data_process.py  df.py  errors.py
