[tool.poetry]
name = "csv-coordinate-formatter"
version = "0.1.0"
description = ""
authors = ["Marek Szczepkowski <kontakt@soft-data.pl>"]
readme = "README.md"
packages = [{include = "csv_coordinate_formatter"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
